08. Calling Backend Services     15- Logging Errors

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "lodash": "^4.17.10",
         "prop-types": "^15.6.2",
         "query-string": "^6.1.0",
+        "raven-js": "^3.26.4",
         "react": "^16.4.2",
         "react-dom": "^16.4.2",
         "react-router-dom": "^4.3.1",
