--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,4 @@
 {
-    "apiEndpoint": "http://jsonplaceholder.typicode.com/posts"
+    "apiEndpoint": "http://jsonplaceholder.typicode.com/posts",
+    "apiUrl": "http://localhost:3900/api"
 }
